--- a/shared/EShop.Shared.Hosting.Gateway/EShop.Shared.Hosting.Gateway.csproj
+++ b/shared/EShop.Shared.Hosting.Gateway/EShop.Shared.Hosting.Gateway.csproj
@@ -8,6 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Humanizer" Version="2.14.1" />
 		<PackageReference Include="Yarp.ReverseProxy" Version="1.1.0" />
 	</ItemGroup>
 
