--- a/shared/EShop.Shared.Hosting.Microservice/EShop.Shared.Hosting.Microservice.csproj
+++ b/shared/EShop.Shared.Hosting.Microservice/EShop.Shared.Hosting.Microservice.csproj
@@ -12,6 +12,7 @@
 		<PackageReference Include="DistributedLock.Redis" Version="1.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="6.0.5" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.5" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
 		<PackageReference Include="Polly" Version="7.2.3" />
 		<PackageReference Include="StackExchange.Redis" Version="2.5.61" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
@@ -23,6 +24,7 @@
 		<PackageReference Include="Volo.Abp.BackgroundJobs.RabbitMQ" Version="5.2.2" />
 		<PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="5.2.2" />
 		<PackageReference Include="Volo.Abp.DistributedLocking" Version="5.2.2" />
+		<PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="5.2.2" />
 		<PackageReference Include="Volo.Abp.MongoDB" Version="5.2.2" />
 	</ItemGroup>
 
