修改本地化共享项目的资源路径

--- a/shared/EShop.Shared.Localization/EShop.Shared.Localization.csproj
+++ b/shared/EShop.Shared.Localization/EShop.Shared.Localization.csproj
@@ -17,8 +17,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<EmbeddedResource Include="Localization\Resources\*.json" />
-		<Content Remove="Localization\Resources\*.json" />
+		<EmbeddedResource Include="Localization\EShop\*.json" />
+		<Content Remove="Localization\EShop\*.json" />
 	</ItemGroup>
 
 </Project>
