--- a/services/Administration/src/EShop.AdministrationService.Domain.Shared/EShop.AdministrationService.Domain.Shared.csproj
+++ b/services/Administration/src/EShop.AdministrationService.Domain.Shared/EShop.AdministrationService.Domain.Shared.csproj
@@ -13,9 +13,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Volo.Abp.AuditLogging.Domain.Shared" Version="5.2.2" />
 		<PackageReference Include="Volo.Abp.PermissionManagement.Domain.Shared" Version="5.2.2" />
 		<PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="5.2.2" />
+		<PackageReference Include="Volo.Abp.AuditLogging.Domain.Shared" Version="5.2.2" />
+		<PackageReference Include="Volo.Abp.BlobStoring.Database.Domain.Shared" Version="5.2.2" />
 	</ItemGroup>
 
 	<ItemGroup>
