--- a/services/Administration/src/EShop.AdministrationService.Application.Contracts/EShop.AdministrationService.Application.Contracts.csproj
+++ b/services/Administration/src/EShop.AdministrationService.Application.Contracts/EShop.AdministrationService.Application.Contracts.csproj
@@ -8,6 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Volo.Abp.FeatureManagement.Application.Contracts" Version="5.2.2" />
 		<PackageReference Include="Volo.Abp.PermissionManagement.Application.Contracts" Version="5.2.2" />
 		<PackageReference Include="Volo.Abp.SettingManagement.Application.Contracts" Version="5.2.2" />
 	</ItemGroup>
