--- a/services/Administration/src/EShop.AdministrationService.Application/EShop.AdministrationService.Application.csproj
+++ b/services/Administration/src/EShop.AdministrationService.Application/EShop.AdministrationService.Application.csproj
@@ -9,6 +9,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Volo.Abp.AutoMapper" Version="5.2.2" />
+		<PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="5.2.2" />
 		<PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="5.2.2" />
 		<PackageReference Include="Volo.Abp.SettingManagement.Application" Version="5.2.2" />
 	</ItemGroup>
