--- a/services/Administration/src/EShop.AdministrationService.Domain.Shared/EShop.AdministrationService.Domain.Shared.csproj
+++ b/services/Administration/src/EShop.AdministrationService.Domain.Shared/EShop.AdministrationService.Domain.Shared.csproj
@@ -13,6 +13,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Volo.Abp.FeatureManagement.Domain.Shared" Version="5.2.2" />
 		<PackageReference Include="Volo.Abp.PermissionManagement.Domain.Shared" Version="5.2.2" />
 		<PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="5.2.2" />
 		<PackageReference Include="Volo.Abp.AuditLogging.Domain.Shared" Version="5.2.2" />
@@ -20,8 +21,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<EmbeddedResource Include="Localization\AdministrationService\*.json" />
-		<Content Remove="Localization\AdministrationService\*.json" />
+		<EmbeddedResource Include="Localization\Administration\*.json" />
+		<Content Remove="Localization\Administration\*.json" />
 	</ItemGroup>
 
 </Project>
