--- a/services/Administration/src/EShop.AdministrationService.Domain/EShop.AdministrationService.Domain.csproj
+++ b/services/Administration/src/EShop.AdministrationService.Domain/EShop.AdministrationService.Domain.csproj
@@ -8,6 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Volo.Abp.FeatureManagement.Domain" Version="5.2.2" />
 		<PackageReference Include="Volo.Abp.PermissionManagement.Domain" Version="5.2.2" />
 		<PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="5.2.2" />
 		<PackageReference Include="Volo.Abp.PermissionManagement.Domain.IdentityServer" Version="5.2.2" />
@@ -18,6 +19,10 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\EShop.AdministrationService.Domain.Shared\EShop.AdministrationService.Domain.Shared.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Settings\" />
 	</ItemGroup>
 
 </Project>
