--- a/services/Administration/src/EShop.AdministrationService.HttpApi.Client/EShop.AdministrationService.HttpApi.Client.csproj
+++ b/services/Administration/src/EShop.AdministrationService.HttpApi.Client/EShop.AdministrationService.HttpApi.Client.csproj
@@ -8,6 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Volo.Abp.FeatureManagement.HttpApi.Client" Version="5.2.2" />
 		<PackageReference Include="Volo.Abp.PermissionManagement.HttpApi.Client" Version="5.2.2" />
 		<PackageReference Include="Volo.Abp.SettingManagement.HttpApi.Client" Version="5.2.2" />
 	</ItemGroup>
