--- a/services/Administration/src/EShop.AdministrationService.HttpApi/EShop.AdministrationService.HttpApi.csproj
+++ b/services/Administration/src/EShop.AdministrationService.HttpApi/EShop.AdministrationService.HttpApi.csproj
@@ -8,6 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Volo.Abp.FeatureManagement.HttpApi" Version="5.2.2" />
 		<PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="5.2.2" />
 		<PackageReference Include="Volo.Abp.SettingManagement.HttpApi" Version="5.2.2" />
 	</ItemGroup>
