将管理微服务中所有类的前缀用缩写Adms表示

--- a/services/Administration/src/EShop.AdministrationService.Domain.Shared/EShop.AdministrationService.Domain.Shared.csproj
+++ b/services/Administration/src/EShop.AdministrationService.Domain.Shared/EShop.AdministrationService.Domain.Shared.csproj
@@ -21,8 +21,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<EmbeddedResource Include="Localization\Administration\*.json" />
-		<Content Remove="Localization\Administration\*.json" />
+		<EmbeddedResource Include="Localization\Adms\*.json" />
+		<Content Remove="Localization\Adms\*.json" />
 	</ItemGroup>
 
 </Project>
