--- a/services/Administration/src/EShop.AdministrationService.HttpApi.Client/EShop.AdministrationService.HttpApi.Client.csproj
+++ b/services/Administration/src/EShop.AdministrationService.HttpApi.Client/EShop.AdministrationService.HttpApi.Client.csproj
@@ -8,13 +8,17 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.5" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Volo.Abp.FeatureManagement.HttpApi.Client" Version="5.2.2" />
 		<PackageReference Include="Volo.Abp.PermissionManagement.HttpApi.Client" Version="5.2.2" />
 		<PackageReference Include="Volo.Abp.SettingManagement.HttpApi.Client" Version="5.2.2" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\EShop.AdministrationService.Application.Contracts\EShop.AdministrationService.Application.Contracts.csproj" />
+		<ProjectReference Include="..\EShop.AdministrationService.Application.Contracts\EShop.AdministrationService.Application.Contracts.csproj" />
 	</ItemGroup>
 
 </Project>
