--- a/services/Identity/src/EShop.IdentityService.HttpApi.Client/EShop.IdentityService.HttpApi.Client.csproj
+++ b/services/Identity/src/EShop.IdentityService.HttpApi.Client/EShop.IdentityService.HttpApi.Client.csproj
@@ -8,11 +8,15 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.5" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Volo.Abp.Identity.HttpApi.Client" Version="5.2.2" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\EShop.IdentityService.Application.Contracts\EShop.IdentityService.Application.Contracts.csproj" />
+		<ProjectReference Include="..\EShop.IdentityService.Application.Contracts\EShop.IdentityService.Application.Contracts.csproj" />
 	</ItemGroup>
 
 </Project>
